<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="5dp">


    <TextView
        android:id="@+id/main_header_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/main_header"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/user_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_header_text_view" />

    <EditText
        android:id="@+id/user_surname_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="textPersonName"
        android:hint="@string/user_surname_hint"
        app:layout_constraintEnd_toEndOf="@+id/user_name_edit"
        app:layout_constraintStart_toStartOf="@+id/user_name_edit"
        app:layout_constraintTop_toBottomOf="@+id/user_name_edit" />

    <EditText
        android:id="@+id/user_age_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/user_age_hint"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/insert_user_button"
        app:layout_constraintStart_toStartOf="@+id/user_surname_edit"
        app:layout_constraintTop_toBottomOf="@+id/user_surname_edit" />

    <Button
        android:id="@+id/insert_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:onClick="InsertUserOnClick"
        android:text="@string/insert_button_label"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/user_age_edit"
        app:layout_constraintEnd_toStartOf="@+id/get_user_button"
        app:layout_constraintTop_toTopOf="@+id/user_age_edit"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/connection_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/get_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/get_user_button_label"
        android:enabled="false"
        android:onClick="GetUserBySurname"
        app:layout_constraintBottom_toBottomOf="@+id/insert_user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/insert_user_button" />

    <TextView
        android:id="@+id/received_data_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/insert_user_button" />


</androidx.constraintlayout.widget.ConstraintLayout>